Fix alignments issues on the mobile design.

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -94,6 +94,10 @@ ul {
   padding-left: 0;
 }
 
+ul.row {
+  padding-left: 0;
+}
+
 .container {
   max-width: none;
   padding: 0;
@@ -216,7 +220,7 @@ ul {
 
   li {
     font-size: 14px;
-    margin-left: 24px;
+    margin-left: 14px;
   }
 
   .blue-banner-container {
@@ -637,6 +641,7 @@ a.menu__link:active {
 .cards-list {
   list-style-type: none;
   padding: none;
+  margin-left: 0;
 }
 
 .projects-list {
